<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bierdienung</string>
    <string name="action_change_table">Tisch wechseln</string>
    <string name="action_add">Produkt hinzufügen</string>
    <string name="action_refresh">Refresh</string>
    <string name="food_menu_button_string">Speisekarte</string>
    <string name="drink_menu_button_string">Getränkekarte</string>
    <string name="refresh">Fertige löschen / Neue laden</string>
    <string name="enter_bedienung">Tisch bedienen</string>
    <string name="essen">Essen</string>
    <string name="getraenke">Getränke</string>
    <string name="tisch_nr">Tisch-Nummer:</string>
    <string name="nr">Nummer eingeben</string>
    <string name="empty">Tisch ist leer</string>
    <string name="menu_delete">Löschen</string>
    <string name="menu_cancel">stornieren</string>
    <string name="no_such_user_exist_toast_string">Dieser Nutzer existiert nicht, bitte registrieren Sie sich!</string>
    <string name="no_tables_toast_string">Es sind leider noch keine Tische angelegt. Bitte wenden Sie sich an Ihren Restaurantleiter!</string>
    <string name="not_back_current_order_dialog_string">Ihre Bestellung wird nicht an die Küche/Ausschank gesendet. Trotzdem zurück gehen?</string>
    <string name="add_to_order_toast_string"> zur Bestellung hinzugefügt!</string>
    <string name="complete_input_toast_string">Bitte Eingaben vervollständigen!</string>
    <string name="successfully_logged_in_toast_string">Sie haben sich erfolgreich eingeloggt!</string>
    <string name="username_string">Nutzername:</string>
    <string name="management_title_string">Verwaltung</string>
    <string name="username_hint_string">Nutzername</string>
    <string name="password_string">Passwort:</string>
    <string name="password_hint_string">Passwort</string>
    <string name="waiter_name_hint_string">Kellnername</string>
    <string name="LoginBtn">Einloggen</string>
    <string name="SignupBtn">Registrieren</string>
    <string name="test">test</string>
    <string name="produkt">Produkt:</string>
    <string name="produktand">z.B. Spezi 0.5l</string>
    <string name="preis">Preis:</string>
    <string name="preisohnezeichen">z.B. 2.30</string>
    <string name="tisch">Tisch:</string>
    <string name="uebernehmen">Übernehmen</string>
    <string name="change">Produkt ändern</string>
    <string name="abrechnen">Tisch abrechnen</string>
    <string name="betrag">Betrag insgesamt:</string>
    <string name="no_connection_string">Keine Internetverbindung vorhanden!</string>
    <string name="connect">Verbinden</string>
    <string name="compute_table_string">Tisch Abrechnen</string>
    <string name="meal_menu_string">Speisekarte</string>
    <string name="drink_menu_string">Getränkekarte</string>
    <string name="table_string">tisch</string>
    <string name="change_product">Produkt ändern</string>
    <string name="add_product">Produkt hinzufügen</string>
    <string name="table_management_button_string">Tische verwalten</string>
    <string name="table_number_edit_text_hint_string">Tischanzahl eingeben!</string>
    <string name="set_table_number_button_string">Fertig</string>
    <string name="send_or_change_order_button_string">Bestellung bearbeiten/aufgeben</string>
    <string name="send_current_oder_button_string">Aufgeben</string>
    <string name="delete_marked_button_string">Markierte löschen</string>
    <string name="waiter_radio_button_string">Kellner</string>
    <string name="kitchen_radio_button_string">Küche</string>
    <string name="drinks_radio_button_string">Ausschank</string>
    <string name="manage_radio_button_string">Verwaltung</string>
    <string name="waiter_logout">Kellner ausloggen</string>
    <string name="jone_string">J.M.</string>
    <string name="jan_string">J.G.</string>
    <string name="max_string">M.F.</string>
    <string name="copyright_string">© Bierdimpfl Inc. 2013</string>
    <string name="cancel">Abbrechen</string>
    <string name="sum_up_marked_button_string">Markierte Abrechnen</string>
    <string name="cancel_order_dialog_string">Ihre Bestellung wird nicht an die Küche/Ausschank gesendet. Trotzdem zurück gehen?</string>
    <string name="mark_finished_string">Fertige Bestellungen markieren!</string>
    <string name="current_num_of_tables_string">Aktuelle Tischanzahl</string>

</resources>