<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/change_table"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_change_table" />
    <item
        android:id="@+id/table"
        android:showAsAction="always"
        android:title="@string/table_string" />
    <item
        android:id="@+id/drinks_menu"
        android:showAsAction="always"
        android:title="@string/drink_menu_string" />
    <item
        android:id="@+id/food_menu"
        android:showAsAction="always"
        android:title="@string/meal_menu_string" />


    <item
        android:id="@+id/compute_table"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/compute_table_string" />

</menu>