<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/produkt" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cash_up_table_button"
        android:layout_below="@+id/text_view_product" />

    <Button
        android:id="@+id/cash_up_table_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_view_sum"
        android:text="@string/abrechnen" />

    <Button
        android:id="@+id/sum_up_marked_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_view_sum"
        android:layout_alignParentRight="true"
        android:text="@string/sum_up_marked_button_string" />

    <TextView
        android:id="@+id/text_view_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:text="@string/betrag"
        android:textSize="20sp"
        android:textColor="#FF0000" />

</RelativeLayout>