<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_food_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/food_menu_button_string" />

    <Button
        android:id="@+id/button_drink_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_food_menu"
        android:layout_marginTop="20dp"
        android:text="@string/drink_menu_button_string" />

    <Button
        android:id="@+id/button_table_management"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_drink_menu"
        android:layout_marginTop="20dp"
        android:text="@string/table_management_button_string" />

</RelativeLayout>