<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tisch_nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tisch_nr" />

    <EditText
        android:id="@+id/nr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tisch_nr"
        android:layout_marginTop="20dp"
        android:hint="@string/nr"
        android:maxLength="3"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/bEnterBedienung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nr"
        android:layout_marginTop="20dp"
        android:text="@string/enter_bedienung" />

</RelativeLayout>