<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.ur.mi.bierdienung.WaiterCurrentOrderActivity">

    <ListView
        android:id="@+id/current_order_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textViewProduktCurrent"
        android:layout_above="@+id/send_current_order_button"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textViewProduktCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/produkt" />

    <TextView
        android:id="@+id/textViewPreisCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/preis" />

    <Button
        android:id="@+id/send_current_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/send_current_oder_button_string"
        android:layout_marginBottom="5dp"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/delete_marked_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/delete_marked_button_string"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true" />


</RelativeLayout>