<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SplashActivty"
    android:background="#000000">


    <ImageView
        android:id="@+id/image_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dummyText"
        android:layout_centerInParent="true"
        android:src="@drawable/bdlogo" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/text_view_jone"
        android:text="@string/jone_string"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/text_view_jan"
        android:text="@string/jan_string"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/text_view_max"
        android:text="@string/max_string"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/text_view_copyright"
        android:text="@string/copyright_string"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
