<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produkt" />

    <EditText
        android:id="@+id/editname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_product"
        android:hint="@string/produktand"
        android:inputType="textAutoCorrect"
        android:scrollbars="vertical"
        android:imeOptions="actionNext"
        android:singleLine="true">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textPreis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editname"
        android:text="@string/preis" />

    <EditText
        android:id="@+id/editpreis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPreis"
        android:hint="@string/preisohnezeichen"
        android:inputType="numberDecimal"
        android:scrollbars="vertical"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editpreis"
        android:layout_marginLeft="16dp">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonuebernehmen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:text="@string/uebernehmen" />

</RelativeLayout>